[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "darktable-importer"
version = "0.0.1"
description = "Importer for Darktable catalogues"
authors = [{ name = "Lurker_pas" }]
requires-python = ">=3.10"
dependencies = ["python-xmp-toolkit==2.1.0"]

[project.scripts]
darktable-importer = "darktable_importer.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
