[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "darktable-importer"
version = "1.0.0"
description = "Importer for Darktable catalogues"
authors = [{ name = "Lurker_pas" }]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
darktable-importer = "darktable_importer.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
